# ssd

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  remove  run  train.py
.dvc/: config
.github/workflows/: ci.yml
dockerfiles/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
pretrained/hub/checkpoints/: .gitignore  resnext101_32x8d-8ba56ff5.pth.dvc  resnext50_32x4d-7cdf4587.pth.dvc  vgg11_bn-6002323d.pth.dvc
pyssd/: cli.py  config.py  main.py  metrics.py  run.oldpy  run.py  visualize.py
pyssd/data/: bboxes.py  loaders.py  priors.py  transforms.py
pyssd/data/datasets/: __init__.py  base.py  clevr.py  coco.py  mnist.py
pyssd/modeling/: checkpoint.py  metrics.py  model.py
pyssd/modeling/backbones/: __init__.py  base.py  mobilenetv2.py  vgg.py
pyssd/modeling/box_predictors/: __init__.py  ssd.py
pytorch_ssd/: args.py
pytorch_ssd/data/: transforms.py
pytorch_ssd/data/datasets/: mot15.py  wider.py
pytorch_ssd/modeling/: model.py
pytorch_ssd/modeling/backbones/: resnext.py
runs/ssd/142gw38b/checkpoints/: ckpt.bak.dvc
runs/ssd/16syd1kj/checkpoints/: ckpt.bak.dvc
runs/ssd/1mqhrv6l/checkpoints/: ckpt.bak.dvc
runs/ssd/1nixkduj/checkpoints/: ckpt.bak.dvc
runs/ssd/1od7b9hs/checkpoints/: ckpt.bak.dvc
runs/ssd/1r9noiwo/checkpoints/: ckpt.bak.dvc
runs/ssd/1s2z7kvy/checkpoints/: .gitignore  ckpt-epoch=198-val_loss=2.07.ckpt.dvc
runs/ssd/1sim9f0v/checkpoints/: .gitignore  ckpt-epoch=266-val_loss=2.01.ckpt.dvc
runs/ssd/1sv11eer/checkpoints/: ckpt.bak.dvc
runs/ssd/1th3wl61/checkpoints/: ckpt.bak.dvc
runs/ssd/1zd777aa/checkpoints/: ckpt.bak.dvc
runs/ssd/1zd8as3h/checkpoints/: ckpt.bak.dvc
ssd/: cli.py  config.py  loss.py  metrics.py  run.py  visualize.py
ssd/data/: bboxes.py  loaders.py  priors.py  transforms.py
ssd/data/datasets/: __init__.py  base.py  coco.py  mnist.py
ssd/dataset/: bboxes.py
ssd/modeling/: checkpoint.py  model.py
ssd/modeling/backbones/: __init__.py  base.py  vgg.py
ssd/modeling/box_predictors/: __init__.py  ssd.py
tests/: conftest.py  test_backbone_base.py  test_backbone_mobilenetv2.py  test_backbone_vgg.py  test_backbone_vgg300.py  test_backbones.py  test_bboxes.py  test_box_predictor_ssd.py  test_checkpoint.py  test_cli.py  test_config.py  test_data_loaders.py  test_dataset_base.py  test_dataset_clevr.py  test_dataset_coco.py  test_dataset_mnist.py  test_dataset_wider.py  test_empty.py  test_loss_multibox.py  test_metrics.py  test_model.py  test_priors.py  test_runner.py  test_transforms.py  test_visualize.py
(+83 files in other folders)
