[tool.poetry]
name = "pyssd"
version = "1.0.0"
description = "Single Shot Multi-Box Detector implementation in PyTorch"
authors = ["PiotrJZielinski <piotrekzie100@gmail.com>"]
packages = [
    { include = "pyssd" }
]

[tool.poetry.dependencies]
python = "^3.8"
yacs = "^0.1.7"
torch = "^1.5.1"
torchvision = "^0.7.0"
albumentations = "^0.4.6"
numpy = "^1.18.4"
click = "^7.1.2"
h5py = "^2.10.0"
tqdm = "^4.46.0"
matplotlib = "^3.2.2"
tensorboard = "^2.2.2"
coolname = "^1.1.0"
pycocotools = "^2.0.1"
pillow = "^7.2.0"
torchnet = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"

[tool.poetry.scripts]
ssd = "pyssd.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
