[tool.poetry]
name = "pyssd"
version = "2.1.0"
description = "Single Shot Multi-Box Detector implementation in PyTorch"
authors = ["PiotrJZielinski <piotrekzie100@gmail.com>"]
packages = [
    { include = "pyssd" }
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
torchvision = "^0.8.0"
pytorch-lightning = "^1.0.5"
albumentations = "^0.5.0"
numpy = "^1.19.3"
h5py = "^2.10.0"
pycocotools = "^2.0.2"
pillow = "^8.0.1"
wandb = "^0.10.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
ssd = "pyssd.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "E231"]

[tool.pytest.ini_options]
addopts = "--color=yes --ignore=data"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
